--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -19,8 +19,8 @@
     </header>
     <main>
         <article>
+            <h2>社会</h2>
             <section>
-                <h2>社会</h2>
                 <h3>和菓子店も「トリックオアトリート！」</h3>
                 <p>日本でも年々人気の高まるハロウィン。<br>
                     今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
@@ -41,9 +41,9 @@
                     </select>
                     <br>
                     <label>性別</label>
-                    <input type="radio" name="性別">男性</input>
-                    <input type="radio" name="性別">女性</input>
-                    <input type="radio" name="性別">その他</input>
+                    <input type="radio" name="性別">男性
+                    <input type="radio" name="性別">女性
+                    <input type="radio" name="性別">その他
                     <br>
                     <label>おすすめの和菓子の名称</label>
                     <input type="text" placeholder="例：みたらし団子" size="23">
@@ -52,16 +52,16 @@
                     <textarea></textarea>
                     <br>
                     <label>個人情報保護方針に同意する</label>
-                    <input type="checkbox"></input>
+                    <input type="checkbox">
                     <br>
                     <input type="submit" value="送信">
                     <input type="reset" value="リセット">
                 </form>
             </section>
         </article>
+        <h2>テクノロジー</h2>
         <article>
             <section>
-                <h2>テクノロジー</h2>
                 <h3>SAMURAIが新しい動画をリリース</h3>
                 <p>SAMURAI公式YouTubeで新しい動画がリリースされました。<br>
                     動画の内容はHTML/CSSの解説です。</p>
@@ -70,6 +70,7 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
+        </article>
     </main>
     <footer>
         <p>&copy; SAMURAIニュース</p>
